# htmlparser

./: .gitignore  2026-01-21-local-command-caveatcaveat-the-messages-below-w.txt  CLAUDE.md  app.py  ascrapter.py  env.py  h3scrapter.py  htmlparser.code-workspace  info.py  kuscraper.py  link.py  link_extract2.py  link_extractor.py  mypy.ini  progress.py  pyproject.toml  requirement.txt  scraper.py  store.py  udemyscraper.py  util.py
_private/: clix-spec.md  fusion_class_top_and_clix-plan.md  fusion_class_top_and_clix-spec.md  refactoring_class_clix-2-spec.md  refactoring_class_clix-spec.md  remove_subcommand_prepare-spec.md  remove_unuse_class_top-spec.md  remove_unused-sepc.md  test-spec.md
_private/20260120/: clix-req.md  memo.md  mypy.md  print_loggerx-requirement.md  private_data_html.md
_private/20260312/: remove_subcommand_prepare-req.md  remove_unused-req.md
_private/20260313/: fusion_class_top_and_clix-req.md  refactoring_class_clix-2-req.md  refactoring_class_clix-req.md  remove_unuse_class_top-req.md
docs/: app_method_calls.md  output_11b-all.tsv
src/htmlparser/: __init__.py  abc.py  amazonsavedcartscraper.py  clix.py  fanzadoujinbasketscraper.py  fanzadoujinpurchasedscraper.py  kuscraper.py  subapp.py  top.py  topconfigdb.py  udemyscraper.py  yklibpy.code-workspace
tests/: conftest.py  test_clix.py
