[project]
name = "htmlparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Yasuo Kominami"}
]
license = "MIT" # ライセンス
# 分類の情報
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "yklibpy",
]

[build-system]
# requires = ["uv_build>=0.9.13,<0.10.0"]
requires = ["hatchling"]
# build-backend = "uv_build"
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "build>=1.3.0",
    "hatch>=1.16.1",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/ykominami/htmlparser"
Repository = "https://github.com/ykominami/htmlparser"

[project.scripts]
htmlparser = "htmlparser:amain"
htmlparser_clear = "htmlparser:clearmain"
htmlparser_count = "htmlparser:count"
htmlparser_print_list_text = "htmlparser:print_list_text"
htmlparser_prepare = "htmlparser:prepare"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/htmlparser"]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'

[tool.ruff]
lint.select = ["E", "F", "I", "N"]
# line-length = 88
# line-length = 120
lint.ignore = ["E501"]
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
# [[tool.mypy.overrides]]
# module = ["untyped_package.*"]
# follow_untyped_imports = true

[tool.uv.sources]
yklibpy = { path = "../yklibpy" }

